// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DoxenCodeBox > Renders HTML 1`] = `
<div
  aria-label="Code example"
  class="doxen-code-box-container"
  data-applied-style-tokens="codeBoxContainer"
  data-style-tokens="codeBoxContainer"
  role="textbox"
  tabindex="0"
  title="Click to copy"
>
  <pre
    class="doxen-code-box"
    data-applied-style-tokens="codeBox"
    data-style-tokens="codeBox"
  >
    <code
      class="hljs xml"
      tabindex="0"
    >
      <span class="hljs-tag">
        &lt;
        <span class="hljs-name">
          div
        </span>
        <span class="hljs-attr">
          attribute
        </span>
        =
        <span class="hljs-string">
          "value"
        </span>
        &gt;
      </span>
      Text
      <span class="hljs-tag">
        &lt;/
        <span class="hljs-name">
          div
        </span>
        &gt;
      </span>
    </code>
  </pre>
</div>
`;

exports[`DoxenCodeBox > Renders JavaScript 1`] = `
<div
  aria-label="Code example"
  class="doxen-code-box-container"
  data-applied-style-tokens="codeBoxContainer"
  data-style-tokens="codeBoxContainer"
  role="textbox"
  tabindex="0"
  title="Click to copy"
>
  <pre
    class="doxen-code-box"
    data-applied-style-tokens="codeBox"
    data-style-tokens="codeBox"
  >
    <code
      class="hljs javascript"
      tabindex="0"
    >
      <span class="hljs-keyword">
        const
      </span>
      value =
      <span class="hljs-number">
        4
      </span>
      ;
      <span class="hljs-variable language_">
        console
      </span>
      .
      <span class="hljs-title function_">
        log
      </span>
      ({
      <span class="hljs-attr">
        key
      </span>
      : value
});
    </code>
  </pre>
</div>
`;

exports[`DoxenCodeBox > Renders with just required props 1`] = `
<div
  aria-label="Code example"
  class
  data-applied-style-tokens="codeBoxContainer"
  data-style-tokens="codeBoxContainer"
  role="textbox"
  tabindex="0"
  title="Click to copy"
>
  <pre
    class
    data-applied-style-tokens="codeBox"
    data-style-tokens="codeBox"
  >
    <code
      class="hljs javascript"
      tabindex="0"
    >
    </code>
  </pre>
</div>
`;
